--- a/Index.html
+++ b/Index.html
@@ -219,43 +219,49 @@
   <button class="order-btn" onclick="sendOrder()">Отправить заказ</button>
 
    <script>
-    function changeQty(btn, delta) {
-      const span = btn.parentNode.querySelector('span');
-      let qty = parseInt(span.textContent);
-      qty = Math.max(0, qty + delta);
-      span.textContent = qty;
-    }
+  function changeQty(btn, delta) {
+    const span = btn.parentNode.querySelector('span');
+    let qty = parseInt(span.textContent);
+    qty = Math.max(0, qty + delta);
+    span.textContent = qty;
+  }
 
-    function sendOrder() {
-      const dishes = document.querySelectorAll('.dish');
-      let order = [];
-      let total = 0;
-      dishes.forEach(dish => {
-        const qty = parseInt(dish.querySelector('span').textContent);
-        if (qty > 0) {
-          const name = dish.dataset.name;
-          const price = parseInt(dish.dataset.price);
-          total += price * qty;
-          order.push('${name} - ${price.toLocaleString()} x ${qty}');
-        }
-      });
+  function sendOrder() {
+    const dishes = document.querySelectorAll('.dish');
+    let order = [];
+    let total = 0;
 
-      const message = 'Ваш заказ:\n${order.join(\n)}\nОбщая стоимость: ${total.toLocaleString()'};
+    dishes.forEach(dish => {
+      const qty = parseInt(dish.querySelector('span').textContent);
+      if (qty > 0) {
+        const name = dish.dataset.name;
+        const price = parseInt(dish.dataset.price);
+        total += price * qty;
+        order.push(`${name} - ${price.toLocaleString()} x ${qty}`);
+      }
+    });
 
-      const telegramBotToken = 'YOUR_BOT_TOKEN';
-      const telegramChatId = 'YOUR_CHAT_ID';
-      fetch('https://api.telegram.org/bot${telegramBotToken}/sendMessage', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          chat_id: telegramChatId,
-          text: message
-        })
-      });
-    
-  </script>
+    fetch('https://your-replit-name.repl.co/send-order', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ order })
+    })
+    .then(response => response.json())
+    .then(data => {
+      if (data.status === "ok") {
+        alert("Заказ отправлен! 🍕");
+      } else {
+        alert("Ошибка при отправке заказа: " + data.detail);
+      }
+    })
+    .catch(error => {
+      alert("Сервер не отвечает: " + error);
+    });
+  }
+</script>
+
     
   </body>
 </html>
